# trabajo-grados-maestria-estadistica-modelos

./: .gitignore  LICENSE  README.md  TODO.md  analisis-grafico.pbix  pyproject.toml
.github/agents/: anteproyecto.tex  architect.agent.md  python-test-closer.agent.md
.github/skills/exec-arch/: SKILL.md
src/finance_modeling/config/: config.py  data_loading_config.yml  experiment_config.yml
src/finance_modeling/data/: __init__.py  loaders.py  preprocessors.py
src/finance_modeling/data/files/sp500/: ^GSPC_curated.csv
src/finance_modeling/evaluation/: __init__.py  comparison.py  evaluator.py  metrics.py
src/finance_modeling/experiments/: runner.py
src/finance_modeling/models/: __init__.py  base.py  ceemdan_lstm.py  garch.py  model_factory.py  psoqrnn.py
src/finance_modeling/results/models/20260419/: CEEMDAN-LSTM_BTC-USD.pkl  CEEMDAN-LSTM_BTC-USD_best_hyperparameters.json  CEEMDAN-LSTM_BTC-USD_evaluation.json  CEEMDAN-LSTM_BTC-USD_results.csv  CEEMDAN-LSTM_ETH-USD_best_hyperparameters.json  CEEMDAN-LSTM_ETH-USD_evaluation.json  CEEMDAN-LSTM_ETH-USD_results.csv  CEEMDAN-LSTM_EURUSD=X.pkl  CEEMDAN-LSTM_EURUSD=X_evaluation.json  CEEMDAN-LSTM_EURUSD=X_results.csv  CEEMDAN-LSTM_GC=F_evaluation.json  CEEMDAN-LSTM_GC=F_results.csv  CEEMDAN-LSTM_^GSPC_best_hyperparameters.json  CEEMDAN-LSTM_^GSPC_evaluation.json  CEEMDAN-LSTM_^GSPC_results.csv  CEEMDAN-LSTM_^IXIC.pkl  CEEMDAN-LSTM_^IXIC_best_hyperparameters.json  CEEMDAN-LSTM_^IXIC_evaluation.json  CEEMDAN-LSTM_^IXIC_results.csv  GARCH.pkl  GARCH_BTC-USD.pkl  GARCH_BTC-USD_evaluation.json  GARCH_BTC-USD_results.csv  GARCH_ETH-USD.pkl  GARCH_ETH-USD_best_hyperparameters.json  GARCH_ETH-USD_evaluation.json  GARCH_ETH-USD_results.csv  GARCH_EURUSD=X.pkl  GARCH_EURUSD=X_evaluation.json  GARCH_EURUSD=X_results.csv  GARCH_GC=F.pkl  GARCH_GC=F_best_hyperparameters.json  GARCH_GC=F_evaluation.json  GARCH_GC=F_results.csv  GARCH_^GSPC.pkl  GARCH_^GSPC_evaluation.json  (+41 more)
src/finance_modeling/schemas/: __init__.py  config.py  data.py  evaluation.py  predictions.py
src/finance_modeling/utils/: __init__.py  common.py  exceptions.py  logger.py
src/trabajo_final_maestria_modelos/config/: __init__.py
src/trabajo_final_maestria_modelos/data/: __init__.py  loaders.py  preprocessors.py
src/trabajo_final_maestria_modelos/data/files/: BTC-USD_curated.csv
src/trabajo_final_maestria_modelos/models/: base.py  ceemdan_lstm.py  garch.py  psoqrnn.py
src/trabajo_final_maestria_modelos/schemas/: __init__.py  config.py  data.py  evaluation.py
src/trabajo_final_maestria_modelos/utils/: __init__.py  common.py  exceptions.py  logger.py
tests/: test_ceemdan_lstm.py  test_comparison.py  test_config.py  test_data.py  test_evaluation.py  test_garch.py  test_models_base.py  test_psoqrnn.py  test_runner.py  test_utils.py
(+4 files in other folders)
