[project]
name = "trabajo-final-maestria-modelos"
version = "0.1.0"
description = "Proyecto final de maestría en modelos de series temporales"
authors = [
    {name = "Andres Molina",email = "andres.molinae29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "arch (>=8.0.0,<9.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=2.11.0,<3.0.0)",
    "emd-signal (>=1.9.0,<2.0.0)",
    "dieboldmariano (>=1.1.0,<2.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "trabajo_final_maestria_modelos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
